deploy-autoscaling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploymentname-autoscaling
  labels:
    owner: DorinLupu
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sas
  template:
    metadata:
      labels:
        app: sas
    spec:
      containers:
      - name: containername
        image: httpd:latest
        ports:
        - containerPort: 80
