deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploymentname
  labels:
    owner: DorinLupu
spec:
  selector:
    matchLabels:
      app: podname
  template:
    metadata:
      labels:
        app: podname
    spec:
      containers:
      - name: containername
        image: nginx:latest
        ports:
        - containerPort: 80
