pod2-phpapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-web
  labels:
    name: myapp
spec:
  containers:
  - name: container-app
    image: nginx:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80

  - name: container-api
    image: tomcat:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 8080
