ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  labels:
    name: my-ingress
    owner: DorinLupu
spec:
  rules:
  - host: nginx.dorin.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              number: 80

  - host: tomcat.dorin.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tomcat
            port: 
              number: 8080

  - host: nginx.dorin.com
    http:
      paths:
      - pathType: Exact
        path: "/httpd"
        backend:
          service:
            name: httpd
            port: 
              number: 80
